--- a/Socket Debugger/View/MainWindow.xaml
+++ b/Socket Debugger/View/MainWindow.xaml
@@ -7,7 +7,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     Title="Socket Debugger" Background="#E8E9EA" Width="915" Height="610"
-    ResizeMode="NoResize" WindowStartupLocation="CenterScreen" mc:Ignorable="d">
+    ResizeMode="NoResize" WindowStartupLocation="CenterScreen" mc:Ignorable="d"
+    Loaded="MainWindow_OnLoaded">
 
     <Window.Resources>
         <Style x:Key="CenterBottomButtonStyle" TargetType="Button" BasedOn="{StaticResource MaterialDesignPaperButton}">
