--- a/Socket Debugger/Views/AddConnectionWindow.xaml
+++ b/Socket Debugger/Views/AddConnectionWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Socket_Debugger.View.AddConnectionWindow"
+﻿<Window x:Class="Socket_Debugger.Views.AddConnectionWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,8 +8,7 @@
         Loaded="Window_Loaded" Closed="Window_Closed">
 
     <Window.Resources>
-        <Style x:Key="BottomFunctionButtonStyle" TargetType="Button"
-               BasedOn="{StaticResource MaterialDesignPaperButton}">
+        <Style x:Key="BottomFunctionButtonStyle" TargetType="Button">
             <Setter Property="Height" Value="26" />
             <Setter Property="FontSize" Value="14" />
             <Setter Property="Foreground" Value="#242424" />
@@ -106,7 +105,8 @@
 
                 <DockPanel Margin="50 10 50 0" Height="35">
                     <TextBlock Text="重复发送" Style="{StaticResource TextBlockStyle}" />
-                    <TextBox x:Name="MessageTextBox" IsEnabled="False" Width="215" Style="{StaticResource TextBoxStyle}">
+                    <TextBox x:Name="MessageTextBox" IsEnabled="False" Width="215"
+                             Style="{StaticResource TextBoxStyle}">
                         <TextBox.Resources>
                             <Style TargetType="{x:Type Border}">
                                 <Setter Property="CornerRadius" Value="5" />
